--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,40 @@
+# Dependencies
 node_modules/
+
+# Next.js
 .next/
+out/
+
+# Environment
 .env
 .env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build / TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs & debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Vercel
+.vercel
+
+# Misc
+*.log
+.cache/
